Add GitHub and Dropbox external identity providers
